<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.zako.assignment1.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:contentDescription="@string/profile_image"
            android:padding="15dp"
            app:srcCompat="@drawable/child" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:padding="7dp">

                <TextView
                    android:id="@+id/textView"
                    android:padding="3dip"
                    android:text="@string/field1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_text_background"
                    android:padding="3dip"
                    android:text=""
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:padding="7dp">

                <TextView
                    android:id="@+id/textView6"
                    android:padding="3dip"
                    android:text="@string/field2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_text_background"
                    android:padding="3dip"
                    android:text=""
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/field3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_text_background"
                    android:padding="3dip"
                    android:text=""
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/field4"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_text_background"
                    android:padding="3dip"
                    android:text=""
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:padding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/field5"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_text_background"
                    android:padding="3dip"
                    android:text=""
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>
